<resources>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>

    <string name="placeholder_nicknamee">昵称</string>
    <string name="placeholder_email">请输入电子邮箱地址</string>
    <string name="placeholder_rpwd">请输入密码</string>
    <string name="placeholder_opwd">请输入原密码</string>
    <string name="placeholder_npwd">请输入新密码(不修改密码请留空)</string>
    <string name="placeholder_npwd_confirm">再输入一遍新密码(不修改密码请留空)</string>
    <string name="placeholder_rpwd_confirm">请输入确认密码</string>
    <string name="placeholder_imgcode">请输入验证码</string>
    <string name="btn_login">登录</string>
    <string name="btn_regist">注册</string>


    <string name="info_text_loading">正在加载，请稍后...</string>
    <string name="info_text_keyword">请输入关键字</string>
    <string name="info_text_snack">在这里记录动态吧</string>


    <string name="emptyImage">EI</string>
    <string name="expand_operation">更多操作</string>

    <string name="settings">设置</string>
    <string name="back">返回</string>
    <string name="form_title">请填写标题</string>
    <string name="form_content">这里写内容</string>


    <!--    region-->
    <string name="placeholder_username">请输入用户名</string>
    <string name="placeholder_pwd">请输入密码</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="layers_request_error">请求错误</string>
    <string name="layers_data_error">数据错误</string>
    <string name="layers_empty">没有内容</string>
    <string name="message_bulb_view_more">查看更多…</string>
    <string name="send">发送</string>
    <!--    endregion-->
</resources>
