<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/formMargin"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/formPadding"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@drawable/banner" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/defaultHintTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/v_user"
                    android:drawablePadding="@dimen/iconPadding"
                    android:hint="@string/placeholder_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/defaultTextColor"
                    android:textColorHint="@color/defaultHintTextColor"
                    android:textSize="@dimen/H2"
                    tools:text="用户名" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/defaultHintTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/v_key"
                    android:drawablePadding="@dimen/iconPadding"
                    android:hint="@string/placeholder_pwd"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/btn_login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/H2"
                    tools:text="密码" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/formPadding">

                <Button
                    android:id="@+id/login_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_login"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="@dimen/H2"
                    android:textStyle="bold" />


                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>

            <TextView
                android:id="@+id/goto_regist_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/formMargin"
                android:paddingTop="@dimen/formMargin"
                android:text="没有帐号？注册一个"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/formPadding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="其他登录方式"
                    android:textColor="@color/defaultHintTextColor"
                    android:textSize="@dimen/H3" />

                <ImageView
                    android:id="@+id/iv_SSO_weibo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/formPadding"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_weibo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/letterGap"
                    android:text="(暂不提供不同登录方式的账号互通绑定)"
                    android:textColor="@color/defaultHintTextColor"
                    android:textSize="@dimen/H3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <com.freddon.android.snackkit.extension.widget.MaskLoadingView
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        android:background="@color/transparentMask" />
</RelativeLayout>
